Build service using Thorntail, optionally create docker image
