# api/src/main/java/com/provys/catalogue/api/GenDomain.java
@@ -6,6 +6,8 @@ import java.lang.String;
 import java.util.Optional;
 import javax.annotation.Nonnull;
 import javax.annotation.processing.Generated;
+import javax.json.bind.annotation.JsonbProperty;
+import javax.xml.bind.annotation.XmlElement;
 
 @Generated(
         value = "com.provys.provysobject.generator.impl.GeneratorEntity",
@@ -15,12 +17,14 @@ interface GenDomain extends ProvysNmObject {
     /**
      * @return Name (attribute NAME)
      */
+    @XmlElement(name = "NAME")
     @Nonnull
     String getName();
 
     /**
      * @return Data type (attribute DATATYPE_NM)
      */
+    @JsonbProperty("DATATYPE_NM")
     @Nonnull
     Optional<String> getDataTypeNm();
 
