# restapi/src/main/java/com/provys/catalogue/restapi/AttrEndpoint.java
@@ -3,9 +3,6 @@ package com.provys.catalogue.restapi;
 import com.provys.catalogue.api.Attr;
 import com.provys.catalogue.api.CatalogueRepository;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -14,10 +11,10 @@ import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
 import java.math.BigInteger;
 
 @Path("/attr")
+@Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
 @ApplicationScoped
 public class AttrEndpoint {
 
@@ -27,40 +24,20 @@ public class AttrEndpoint {
 
     @GET
     @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}/{nameNm : [a-zA-Z][a-zA-Z_0-9]*}")
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Operation(
             summary = "Get Attribute by Internal Name",
-            description = "Retrieve attribute using internal name",
-            responses = {
-                    @ApiResponse(
-                            description = "Attribute",
-                            content = @Content(
-                                    mediaType = "application/xml",
-                                    schema = @Schema(
-                                            implementation = Attr.class,
-                                            maxLength = 30
-                                    )))})
-    public Response getAttrByNameNm(@PathParam("entityNm") String entityNm, @PathParam("nameNm") String nameNm) {
-        return Response.ok(catalogueRepository.getAttrManager().getByEntityIdNameNm(
-                catalogueRepository.getEntityManager().getByNameNm(entityNm).getId(), nameNm)).build();
+            description = "Retrieve attribute using internal name")
+    public Attr getAttrByNameNm(@PathParam("entityNm") String entityNm, @PathParam("nameNm") String nameNm) {
+        return catalogueRepository.getAttrManager().getByEntityIdNameNm(
+                catalogueRepository.getEntityManager().getByNameNm(entityNm).getId(), nameNm);
     }
 
     @GET
     @Path("/{attrId : [0-9]*}")
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Operation(
             summary = "Get Attribute",
-            description = "Retrieve atribute using Id",
-            responses = {
-                    @ApiResponse(
-                            description = "Attribute",
-                            content = @Content(
-                                    mediaType = "application/xml",
-                                    schema = @Schema(
-                                            implementation = Attr.class,
-                                            maxLength = 30
-                                    )))})
-    public Response getAttrById(@PathParam("attrId") BigInteger id) {
-        return Response.ok(catalogueRepository.getAttrManager().getById(id)).build();
+            description = "Retrieve atribute using Id")
+    public Attr getAttrById(@PathParam("attrId") BigInteger id) {
+        return catalogueRepository.getAttrManager().getById(id);
     }
 }
