# restapi/src/main/java/com/provys/catalogue/restapi/DomainEndpoint.java
@@ -2,12 +2,7 @@ package com.provys.catalogue.restapi;
 
 import com.provys.catalogue.api.CatalogueRepository;
 import com.provys.catalogue.api.Domain;
-import com.provys.catalogue.impl.DomainProxy;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -16,10 +11,11 @@ import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
 import java.math.BigInteger;
+import java.util.Collection;
 
 @Path("/domain")
+@Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
 @ApplicationScoped
 public class DomainEndpoint {
 
@@ -29,57 +25,28 @@ public class DomainEndpoint {
 
     @GET
     @Path("/{domainNm : [a-zA-Z][a-zA-Z_0-9]*}")
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Operation(
             summary = "Get Domain by Internal Name",
-            description = "Retrieve domain using internal name",
-            responses = {
-                    @ApiResponse(
-                            description = "Domain",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    schema = @Schema(
-                                            implementation = Domain.class,
-                                            maxLength = 30
-                                    )))})
-    public Response getDomainByNameNm(@PathParam("domainNm") String domainNm) {
-        return Response.ok(catalogueRepository.getDomainManager().getByNameNm(domainNm)).build();
+            description = "Retrieve domain using internal name")
+    public Domain getDomainByNameNm(@PathParam("domainNm") String domainNm) {
+        return catalogueRepository.getDomainManager().getByNameNm(domainNm);
     }
 
     @GET
     @Path("/{domainId : [0-9]*}")
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Operation(
             summary = "Get Domain",
-            description = "Retrieve domain using Id",
-            responses = {
-                    @ApiResponse(
-                            description = "Domain",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    schema = @Schema(
-                                            implementation = Domain.class,
-                                            maxLength = 30
-                                    )))})
-    public Response getDomainById(@PathParam("domainId") BigInteger id) {
-        return Response.ok(catalogueRepository.getDomainManager().getById(id)).build();
+            description = "Retrieve domain using Id")
+    public Domain getDomainById(@PathParam("domainId") BigInteger id) {
+        return catalogueRepository.getDomainManager().getById(id);
     }
 
     @GET
     @Path("/")
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Operation(
             summary = "Get All Domains",
-            description = "Retrieve all domains",
-            responses = {
-                    @ApiResponse(
-                            description = "Domain",
-                            content = @Content(
-                                    mediaType = "application.json",
-                                    array = @ArraySchema(
-                                            schema = @Schema(implementation = DomainProxy.class)
-                                    )))})
-    public Response getAllDomains() {
-        return Response.ok(catalogueRepository.getDomainManager().getAll()).build();
+            description = "Retrieve all domains")
+    public Collection<Domain> getAllDomains() {
+        return catalogueRepository.getDomainManager().getAll();
     }
 }
