# restapi/src/main/java/com/provys/catalogue/restapi/EntityEndpoint.java
@@ -3,18 +3,15 @@ package com.provys.catalogue.restapi;
 import com.provys.catalogue.api.CatalogueRepository;
 import com.provys.catalogue.api.Entity;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
 import java.math.BigInteger;
 
 @Path("/entity")
+@Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
 @ApplicationScoped
 public class EntityEndpoint {
 
@@ -24,21 +21,11 @@ public class EntityEndpoint {
 
     @GET
     @Path("/{entityNm : [a-zA-Z][a-zA-Z_0-9]*}")
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Operation(
             summary = "Get Entity by Internal Name",
-            description = "Retrieve entity using internal name",
-            responses = {
-                    @ApiResponse(
-                            description = "Entity",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    schema = @Schema(
-                                            implementation = Entity.class,
-                                            maxLength = 30
-                                    )))})
-    public Response getEntityByNameNm(@PathParam("entityNm") String entityNm) {
-        return Response.ok(catalogueRepository.getEntityManager().getByNameNm(entityNm)).build();
+            description = "Retrieve entity using internal name")
+    public Entity getEntityByNameNm(@PathParam("entityNm") String entityNm) {
+        return catalogueRepository.getEntityManager().getByNameNm(entityNm);
     }
 
     @GET
@@ -46,17 +33,8 @@ public class EntityEndpoint {
     @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Operation(
             summary = "Get Entity",
-            description = "Retrieve entity using Id",
-            responses = {
-                    @ApiResponse(
-                            description = "Entity",
-                            content = @Content(
-                                    mediaType = "application/json",
-                                    schema = @Schema(
-                                            implementation = Entity.class,
-                                            maxLength = 30
-                                    )))})
-    public Response getEntityByNameNm(@PathParam("entityId") BigInteger id) {
-        return Response.ok(catalogueRepository.getEntityManager().getById(id)).build();
+            description = "Retrieve entity using Id")
+    public Entity getEntityByNameNm(@PathParam("entityId") BigInteger id) {
+        return catalogueRepository.getEntityManager().getById(id);
     }
 }
