# restapi/src/main/webapp/openapi/openapi.yaml
@@ -5,9 +5,27 @@ info:
     metadata catalogue
   version: "1.0"
 servers:
-- url: /catalogue/api
+- url: /api
   variables: {}
 paths:
+  /attr/{attrId}:
+    get:
+      summary: Get Attribute
+      description: Retrieve atribute using Id
+      operationId: getAttrById
+      parameters:
+      - name: attrId
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        default:
+          description: Attribute
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Attr'
   /attr/{entityNm}/{nameNm}:
     get:
       summary: Get Attribute by Internal Name
@@ -31,38 +49,6 @@ paths:
             application/xml:
               schema:
                 $ref: '#/components/schemas/Attr'
-  /attr/{attrId}:
-    get:
-      summary: Get Attribute
-      description: Retrieve atribute using Id
-      operationId: getAttrById
-      parameters:
-      - name: attrId
-        in: path
-        required: true
-        schema:
-          type: integer
-      responses:
-        default:
-          description: Attribute
-          content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Attr'
-  /domain:
-    get:
-      summary: Get All Domains
-      description: Retrieve all domains
-      operationId: getAllDomains
-      responses:
-        default:
-          description: Domain
-          content:
-            application.json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/DomainProxy'
   /domain/{domainId}:
     get:
       summary: Get Domain
@@ -76,11 +62,10 @@ paths:
           type: integer
       responses:
         default:
-          description: Domain
+          description: default response
           content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Domain'
+            application/json: {}
+            application/xml: {}
   /domain/{domainNm}:
     get:
       summary: Get Domain by Internal Name
@@ -94,11 +79,25 @@ paths:
           type: string
       responses:
         default:
-          description: Domain
+          description: default response
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Domain'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Domain'
+  /domain:
+    get:
+      summary: Get All Domains
+      description: Retrieve all domains
+      operationId: getAllDomains
+      responses:
+        default:
+          description: default response
+          content:
+            application/json: {}
+            application/xml: {}
   /entity/{entityNm}:
     get:
       summary: Get Entity by Internal Name
@@ -140,14 +139,34 @@ components:
     Attr:
       type: object
       properties:
+        name:
+          type: string
         entity:
           $ref: '#/components/schemas/Entity'
-        javaName:
-          type: string
-        subdomainNm:
-          type: string
         attrGrpId:
           type: integer
+        domain:
+          $ref: '#/components/schemas/Domain'
+        subdomainNm:
+          type: string
+        mandatory:
+          type: boolean
+        ordInEntity:
+          type: integer
+          format: int32
+        nameNm:
+          type: string
+        note:
+          type: string
+        properNameRoot:
+          type: string
+        attrGrp:
+          $ref: '#/components/schemas/AttrGrp'
+        entityId:
+          type: integer
+        ord:
+          type: integer
+          format: int32
         attrType:
           type: string
           enum:
@@ -157,57 +176,41 @@ components:
           - FINANCE
           - SQL
           - FORMULA
-        ordInEntity:
-          type: integer
-          format: int32
         defValue:
           type: string
-        nameNm:
-          type: string
-        domain:
-          $ref: '#/components/schemas/Domain'
-        mandatory:
-          type: boolean
-        note:
-          type: string
-        properNameRoot:
-          type: string
-        ord:
-          type: integer
-          format: int32
-        entityId:
-          type: integer
-        attrGrp:
-          $ref: '#/components/schemas/AttrGrp'
-        name:
+        javaName:
           type: string
         id:
           type: integer
     AttrGrp:
       type: object
       properties:
+        name:
+          type: string
         entity:
           $ref: '#/components/schemas/Entity'
         nameNm:
           type: string
         note:
           type: string
+        entityId:
+          type: integer
         ord:
           type: integer
           format: int32
-        entityId:
-          type: integer
         attrs:
           type: array
           items:
             $ref: '#/components/schemas/Attr'
-        name:
-          type: string
         id:
           type: integer
     Domain:
       type: object
       properties:
+        name:
+          type: string
+          xml:
+            name: NAME
         note:
           type: string
         validateCd:
@@ -216,22 +219,20 @@ components:
           type: boolean
         allowed:
           type: boolean
-        dataLength:
-          type: integer
-          format: int32
-        lvisible:
+        isqVisible:
           type: boolean
-        dataTypeNm:
+        getlFormatCd:
           type: string
-        qvisible:
+        islVisible:
           type: boolean
         dataPrecision:
           type: integer
           format: int32
-        lformatCd:
+        dataTypeNm:
           type: string
-        name:
-          type: string
+        dataLength:
+          type: integer
+          format: int32
         nameNm:
           type: string
         id:
@@ -239,12 +240,46 @@ components:
     Entity:
       type: object
       properties:
+        name:
+          type: string
+        table:
+          type: string
         ancestor:
           $ref: '#/components/schemas/Entity'
         note:
           type: string
+        custom:
+          type: boolean
+        used:
+          type: boolean
+        objectClass:
+          type: boolean
+        pgPackage:
+          type: string
+        ancestorId:
+          type: integer
+        epPackage:
+          type: string
         entityGrp:
           $ref: '#/components/schemas/EntityGrp'
+        structureDoc:
+          type: string
+        usageDoc:
+          type: string
+        cpPackage:
+          type: string
+        customNote:
+          type: string
+        view:
+          type: string
+        fpPackage:
+          type: string
+        entityGrpId:
+          type: integer
+        behaviourDoc:
+          type: string
+        implDoc:
+          type: string
         attrGrps:
           type: array
           items:
@@ -253,40 +288,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Attr'
-        structureDoc:
-          type: string
-        objectClass:
-          type: boolean
-        usageDoc:
-          type: string
-        view:
-          type: string
-        used:
-          type: boolean
-        pgPackage:
-          type: string
-        cpPackage:
-          type: string
-        epPackage:
-          type: string
-        behaviourDoc:
-          type: string
-        customNote:
-          type: string
-        fpPackage:
-          type: string
-        implDoc:
-          type: string
-        custom:
-          type: boolean
-        ancestorId:
-          type: integer
-        entityGrpId:
-          type: integer
-        name:
-          type: string
-        table:
-          type: string
         nameNm:
           type: string
         id:
@@ -294,6 +295,8 @@ components:
     EntityGrp:
       type: object
       properties:
+        name:
+          type: string
         children:
           type: array
           items:
@@ -303,92 +306,18 @@ components:
         ord:
           type: integer
           format: int32
-        entities:
-          type: array
-          items:
-            $ref: '#/components/schemas/Entity'
+        parentId:
+          type: integer
         fullOrd:
           type: array
           items:
             type: integer
             format: int32
-        parentId:
-          type: integer
-        name:
-          type: string
+        entities:
+          type: array
+          items:
+            $ref: '#/components/schemas/Entity'
         nameNm:
           type: string
         id:
           type: integer
-    DomainProxy:
-      type: object
-      properties:
-        id:
-          type: integer
-        lastUsed:
-          type: integer
-          format: int64
-        valueObject:
-          $ref: '#/components/schemas/DomainValue'
-        deleted:
-          type: boolean
-        note:
-          type: string
-        validateCd:
-          type: string
-        natOrder:
-          type: boolean
-        allowed:
-          type: boolean
-        dataLength:
-          type: integer
-          format: int32
-        lvisible:
-          type: boolean
-        dataTypeNm:
-          type: string
-        qvisible:
-          type: boolean
-        dataPrecision:
-          type: integer
-          format: int32
-        lformatCd:
-          type: string
-        name:
-          type: string
-        nameNm:
-          type: string
-          xml:
-            name: NAME_NM
-    DomainValue:
-      type: object
-      properties:
-        id:
-          type: integer
-        nameNm:
-          type: string
-        name:
-          type: string
-        dataTypeNm:
-          type: string
-        dataLength:
-          type: integer
-          format: int32
-        dataPrecision:
-          type: integer
-          format: int32
-        note:
-          type: string
-        allowed:
-          type: boolean
-        validateCd:
-          type: string
-        natOrder:
-          type: boolean
-        lvisible:
-          type: boolean
-        qvisible:
-          type: boolean
-        lformatCd:
-          type: string
-      writeOnly: true
